Feature/ax 2275 labels api (#2007)
